      (Thanks Fergal)
    - Use of eq_* now officially discouraged.
    - Removed eq_* from the SYNOPSIS.
    - is_deeply(undef, $not_undef); now works. [rt.cpan.org 9441]
    - is_deeply() was mistakenly interpeting the same reference used twice
      in a data structure as being circular causing failures.
      [rt.cpan.org 11623]

0.54  Wed Dec 15 04:18:43 EST 2004
    * $how_many is optional for skip() and todo_skip().  Thanks to 
      Devel::Cover for pointing this out.
    - Removed a user defined function called err() in the tests to placate
      users of older versions of the dor patch before err() was weakend.
      [rt.cpan.org 8734]

0.53_01  Sat Dec 11 19:02:18 EST 2004
    - current_test() can now be set backward.
    - *output() methods now handle tied handles and *FOO{IO} properly.
    - maybe_regex() now handles undef gracefully.
    - maybe_regex() now handles 'm,foo,' style regexes.
    - sort_bug.t wasn't checking for threads properly.  Would fail on
      5.6 that had ithreads compiled in. [rt.cpan.org 8765]

0.53  Mon Nov 29 04:43:24 EST 2004
    - Apparently its possible to have Module::Signature installed without
      it being functional.  Fixed the signature test to account for this.
      (not a real bug)

0.52  Sun Nov 28 21:41:03 EST 2004
    - plan() now better checks that the given plan is valid. 
      [rt.cpan.org 2597]

0.51_02  Sat Nov 27 01:25:25 EST 2004
    * is_deeply() and all the eq_* functions now handle circular data
      structures.  [rt.cpan.org 7289]
    * require_ok() now handles filepaths in addition to modules.
    - Clarifying Test::More's position on overloaded objects 
    - Fixed a bug introduced in 0.51_01 causing is_deeply() to pierce
      overloaded objects.
    - Mentioning rt.cpan.org for reporting bugs.

0.51_01  Fri Nov 26 02:59:30 EST 2004
    - plan() was accidentally exporting functions [rt.cpan.org 8385]
    * diag @msgs would insert # between arguments. [rt.cpan.org 8392]