@@ -1,0 +1,3 @@
+require Test::Builder;
+
+exit 1;
