@@ -10,6 +10,8 @@
     - is_deeply() was mistakenly interpeting the same reference used twice
       in a data structure as being circular causing failures.
       [rt.cpan.org 11623]
+    - Loading Test::Builder but not using it would interfere with the
+      exit code if the code exited. [rt.cpan.org 12310]
 
 0.54  Wed Dec 15 04:18:43 EST 2004
     * $how_many is optional for skip() and todo_skip().  Thanks to 
